Stylesheets/_ul.cards.scss
ul.cards
{
    padding: 0;
    margin-bottom: 3rem;
    list-style-type: none;

    > li:first-child
    {
        > h3
        {
            margin-top: 0;
        }
    }
    > li
    {
        margin: 0.5rem 0 0.5rem 0;
        padding: 0;

        > h3.module,
        > h3.product
        {
            margin: 0.75rem 0 0 0;

            font-family: $typeface-serif;
            font-style: italic;
            font-size: 100%;
            font-weight: normal;
        }
        > h3.article
        {
            margin: 2rem 0 0.5rem 0;

            font-family: $typeface-serif;
            font-weight: normal;
            font-size: 125%;

            a
            {
                color: inherit;
                text-decoration: underline;
                text-decoration-style: dashed;
            }
            a:hover
            {
                text-decoration-style: solid;
            }
        }

        > a.read-more
        {
            font-style: italic;
        }

        > code.decl
        {
            a
            {
                color: var(--fg-swift-comment);

                span.xv
                {
                    color: var(--color-hot);
                }
            }

            a.discouraged
            {
                text-decoration: line-through;

                span.xv
                {
                    color: inherit;
                }
            }
        }

        > code.decl
        {
            display: block;
            padding: 0.8em 0 0 0;
            text-indent: -2.5rem;
            margin-left: 2.5rem;
            white-space: pre-wrap;

            font-size: 100%;
            line-height: 1.5rem;
        }
        > code.decl.multiline
        {
            text-indent: 0;
            margin-left: 0;
        }

        > code.decl + p
        {
            padding: 0 0 0 2.5rem;
            line-height: 1.3rem;
            font-size: 90.625%;
        }
    }

    > li[id]:target
    {
        > code a
        {
            background-color: var(--bg-highlight);
        }
    }

    > li[id]
    {
        > a:first-child
        {
            position: absolute;
            margin-left: -1.5em;
            margin-top: 0.8em;
        }
        > a:first-child::before
        {
            content: '$';

            line-height: 1.5rem;

            font-family: $typeface-monospace;
            font-size: 100%;
            opacity: 0.25;
            color: var(--fg-semi);
        }
        > a:first-child:hover::before
        {
            opacity: 1;
            color: var(--color-hot)
        }
    }
}
ul.cards.dense
{
    > li
    {
        > code.decl
        {
            a
            {
                span.xv
                {
                    color: var(--fg-accent);
                }
            }
        }
    }
}

